<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

    <TextView
        android:id="@+id/tv_channel"
        android:layout_width="100dp"
        android:background="@drawable/shape_channel_select"
        android:layout_height="50dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onChannelClick"
        android:text="@string/select_channel"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_shout_interval"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_channel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_channel"
        android:hint="@string/shout_interval"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="15sp"/>

    <CheckBox
        android:id="@+id/cb_shout_one"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_channel"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/et_shout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cb_shout_one"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cb_shout_one"
        android:hint="@string/auto_shout_1"
        android:textSize="15sp"/>

    <CheckBox
        android:id="@+id/cb_shout_two"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_shout_one"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/et_shout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cb_shout_two"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cb_shout_two"
        android:hint="@string/auto_shout_2"
        android:textSize="15sp"/>

    <CheckBox
        android:id="@+id/cb_shout_three"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_shout_two"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/et_shout_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cb_shout_three"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cb_shout_three"
        android:hint="@string/auto_shout_3"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</RelativeLayout>